--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,7 @@
 project('com.github.manexim.home', 'vala', 'c')
 
 gtk_plus_3_dep = dependency('gtk+-3.0')
+posix_dep = meson.get_compiler('vala').find_library('posix')
 
 subdir('data')
 subdir('src')
