Add discovery service for lifx lamps

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,9 @@
 project('com.github.manexim.home', 'vala', 'c')
 
 gtk_plus_3_dep = dependency('gtk+-3.0')
+json_glib_1_dep = dependency('json-glib-1.0')
 posix_dep = meson.get_compiler('vala').find_library('posix')
+gee_dep = dependency('gee-0.8')
 
 subdir('data')
 subdir('src')
