Add icon for LIFX lamps

--- a/data/com.github.manexim.home.desktop
+++ b/data/com.github.manexim.home.desktop
@@ -5,3 +5,4 @@ GenericName=Home
 Comment=Control your smart home gadgets
 Exec=com.github.manexim.home
 Icon=com.github.manexim.home
+Categories=GNOME;GTK;Network;
