--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,17 @@ Source: com.github.manexim.home
 Section: x11
 Priority: optional
 Maintainer: Marius Meisenzahl <mariusmeisenzahl@gmail.com>
-Build-Depends: meson (>= 0.40),
+Build-Depends: meson,
                debhelper (>= 9),
                libgtk-3-dev,
                libjson-glib-dev,
                libgee-0.8-dev,
                libgranite-dev,
-               valac (>= 0.40.0)
+               valac
 Standards-Version: 3.9.3
 
 Package: com.github.manexim.home
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Home
- This is an application to control smart home devices
+ Control your smart home gadgets
