--- a/data/meson.build
+++ b/data/meson.build
@@ -33,3 +33,9 @@ install_data(
     meson.project_name() + '.appdata.xml',
     install_dir: join_paths(get_option('datadir'), 'metainfo')
 )
+
+
+install_data(
+    meson.project_name() + '.gschema.xml',
+    install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
+)
