Add overlay to show toast notifications

--- a/src/meson.build
+++ b/src/meson.build
@@ -18,7 +18,8 @@ sources = [
     'utils/History.vala',
     'utils/Platform.vala',
     'views/ThingsView.vala',
-    'views/WelcomeView.vala'
+    'views/WelcomeView.vala',
+    'widgets/Overlay.vala'
 ]
 
 executable(
