--- a/src/meson.build
+++ b/src/meson.build
@@ -7,8 +7,8 @@ sources = [
     'lifx/Service.vala',
     'models/Lamp.vala',
     'models/Thing.vala',
-    'pages/LampPage.vala',
     'pages/LoadingPage.vala',
+    'pages/ThingPage.vala',
     'philips/hue/Bridge.vala',
     'philips/hue/BridgeController.vala',
     'philips/hue/Lamp.vala',
