--- a/data/meson.build
+++ b/data/meson.build
@@ -16,7 +16,8 @@ symbolic_icons = [
     'com.github.manexim.home.lightbulb-symbolic',
     'com.github.manexim.home.lightbulb.lifx-symbolic',
     'com.github.manexim.home.logo.lifx-symbolic',
-    'com.github.manexim.home.logo.philips.hue-symbolic'
+    'com.github.manexim.home.logo.philips.hue-symbolic',
+    'com.github.manexim.home.thing-symbolic'
 ]
 
 foreach icon : symbolic_icons
