--- a/data/meson.build
+++ b/data/meson.build
@@ -13,6 +13,7 @@ foreach i : icon_sizes
 endforeach
 
 symbolic_icons = [
+    'com.github.manexim.home.bridge.philips.hue-symbolic',
     'com.github.manexim.home.lightbulb-symbolic',
     'com.github.manexim.home.lightbulb.lifx-symbolic',
     'com.github.manexim.home.logo.lifx-symbolic',
