Implement page to configure Philips Hue Bridge

--- a/data/meson.build
+++ b/data/meson.build
@@ -16,6 +16,7 @@ symbolic_icons = [
     'com.github.manexim.home.bridge.philips.hue-symbolic',
     'com.github.manexim.home.lightbulb-symbolic',
     'com.github.manexim.home.lightbulb.lifx-symbolic',
+    'com.github.manexim.home.lightbulb.philips.hue-symbolic',
     'com.github.manexim.home.logo.lifx-symbolic',
     'com.github.manexim.home.logo.philips.hue-symbolic',
     'com.github.manexim.home.thing-symbolic'
