Use separate base models for devices and hubs

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,15 +1,17 @@
 sources = [
     'config/Constants.vala',
-    'controllers/ThingsController.vala',
+    'controllers/DevicesController.vala',
     'lifx/LampController.vala',
     'lifx/Lamp.vala',
     'lifx/Packet.vala',
     'lifx/Service.vala',
+    'models/Device.vala',
     'models/Lamp.vala',
+    'models/Hub.vala',
     'models/Thing.vala',
     'pages/HueBridgeOnboardingPage.vala',
+    'pages/DevicePage.vala',
     'pages/LoadingPage.vala',
-    'pages/ThingPage.vala',
     'philips/hue/Bridge.vala',
     'philips/hue/BridgeController.vala',
     'philips/hue/Lamp.vala',
@@ -19,8 +21,8 @@ sources = [
     'utils/Buffer.vala',
     'utils/History.vala',
     'utils/Platform.vala',
+    'views/DevicesView.vala',
     'views/Overview.vala',
-    'views/ThingsView.vala',
     'views/WelcomeView.vala',
     'widgets/Carousel.vala',
     'widgets/CarouselItem.vala',
