Add onboarding view for first run

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,11 @@ sources = [
     'models/Lamp.vala',
     'models/Hub.vala',
     'models/Thing.vala',
+    'onboarding/AbstractOnboardingView.vala',
+    'onboarding/FinishView.vala',
+    'onboarding/LIFXView.vala',
+    'onboarding/PhilipsHueView.vala',
+    'onboarding/StartView.vala',
     'pages/HueBridgeOnboardingPage.vala',
     'pages/DevicePage.vala',
     'pages/LoadingPage.vala',
@@ -24,8 +29,8 @@ sources = [
     'utils/History.vala',
     'utils/Platform.vala',
     'views/DevicesView.vala',
+    'views/OnboardingView.vala',
     'views/Overview.vala',
-    'views/WelcomeView.vala',
     'widgets/Carousel.vala',
     'widgets/CarouselItem.vala',
     'widgets/Overlay.vala',
