--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,6 @@
 project('com.github.manexim.home', 'vala', 'c')
 
+gnome = import('gnome')
 i18n = import('i18n')
 add_global_arguments('-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()), language:'c')
 
