Add initial draft to set custom icons for devices

--- a/data/meson.build
+++ b/data/meson.build
@@ -13,13 +13,13 @@ foreach i : icon_sizes
 endforeach
 
 symbolic_icons = [
-    'com.github.manexim.home.bridge.philips.hue-symbolic',
-    'com.github.manexim.home.lightbulb-symbolic',
-    'com.github.manexim.home.lightbulb.lifx-symbolic',
-    'com.github.manexim.home.lightbulb.philips.hue-symbolic',
+    'com.github.manexim.home.icon.bridge.philips.hue-symbolic',
+    'com.github.manexim.home.icon.lightbulb-symbolic',
+    'com.github.manexim.home.icon.lightbulb.lifx-symbolic',
+    'com.github.manexim.home.icon.lightbulb.philips.hue-symbolic',
+    'com.github.manexim.home.icon.thing-symbolic',
     'com.github.manexim.home.logo.lifx-symbolic',
-    'com.github.manexim.home.logo.philips.hue-symbolic',
-    'com.github.manexim.home.thing-symbolic'
+    'com.github.manexim.home.logo.philips.hue-symbolic'
 ]
 
 foreach icon : symbolic_icons
