Update base class for device page to change icon in header

--- a/src/meson.build
+++ b/src/meson.build
@@ -15,6 +15,7 @@ sources = [
     'onboarding/LIFXView.vala',
     'onboarding/PhilipsHueView.vala',
     'onboarding/StartView.vala',
+    'pages/AbstractDevicePage.vala',
     'pages/HueBridgeOnboardingPage.vala',
     'pages/DevicePage.vala',
     'pages/LoadingPage.vala',
