--- a/data/com.github.manexim.home.appdata.xml.in
+++ b/data/com.github.manexim.home.appdata.xml.in
@@ -21,6 +21,29 @@
     <binary>com.github.manexim.home</binary>
   </provides>
   ​<releases>
+    <release date="2019-08-07" version="0.4.2">
+      <description>
+        <p>New:</p>
+        <ul>
+        </ul>
+        <p>Improved:</p>
+        <ul>
+        </ul>
+        <p>Fixed:</p>
+        <ul>
+          <li>Fix of overlapping elements</li>
+        </ul>
+        <p>Translations:</p>
+        <ul>
+          <li>Russian (by camellan)</li>
+          <li>French (by NathanBnm)</li>
+          <li>German (by meisenzahl)</li>
+          <li>Japanese (by ryonakano)</li>
+          <li>Portuguese (by aimproxy)</li>
+          <li>Polish (by oskarkunik)</li>
+        </ul>
+      </description>
+    </release>
     <release date="2019-08-07" version="0.4.1">
       <description>
         <p>New:</p>
