--- a/src/meson.build
+++ b/src/meson.build
@@ -36,6 +36,7 @@ sources = [
     'views/Overview.vala',
     'widgets/Carousel.vala',
     'widgets/CarouselItem.vala',
+    'widgets/ColorPicker.vala',
     'widgets/IconPopover.vala',
     'widgets/Overlay.vala',
     'MainWindow.vala'
