--- a/data/com.github.manexim.home.appdata.xml.in
+++ b/data/com.github.manexim.home.appdata.xml.in
@@ -21,6 +21,30 @@
     <binary>com.github.manexim.home</binary>
   </provides>
   ​<releases>
+    <release date="2019-11-03" version="0.5.0">
+      <description>
+        <p>New:</p>
+        <ul>
+         <li>Use color picker to set color of smart bulbs</li>
+        </ul>
+        <p>Improved:</p>
+        <ul>
+          <li>Show an error page if network is not available</li>
+        </ul>
+        <p>Fixed:</p>
+        <ul>
+        </ul>
+        <p>Translations:</p>
+        <ul>
+          <li>Russian (by camellan)</li>
+          <li>French (by NathanBnm)</li>
+          <li>German (by meisenzahl)</li>
+          <li>Japanese (by ryonakano)</li>
+          <li>Portuguese (by aimproxy)</li>
+          <li>Polish (by oskarkunik)</li>
+        </ul>
+      </description>
+    </release>
     <release date="2019-08-07" version="0.4.2">
       <description>
         <p>New:</p>
