--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,30 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  lint:
+  build:
 
     runs-on: ubuntu-latest
 
     container:
-      image: valalang/lint
+      image: elementary/docker:unstable
 
     steps:
     - uses: actions/checkout@v1
-    - name: Lint
-      run: io.elementary.vala-lint -d .
+    - name: Install Dependencies
+      run: |
+        apt update
+        apt install -y libgranite-dev libgtk-3-dev libjson-glib-dev libgee-0.8-dev libsoup2.4-dev libxml2-dev uuid-dev libhandy-1-dev meson valac
+    - name: Build
+      env:
+        DESTDIR: out
+      run: |
+        meson build
+        ninja -C build
+        ninja -C build install
+  lint:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: elementary/actions/vala-lint@master
