--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Marius Meisenzahl <mariusmeisenzahl@gmail.com>
 Build-Depends: meson,
                debhelper (>= 9),
                libgtk-3-dev,
+               libhandy-1-dev,
                libjson-glib-dev,
                libgee-0.8-dev,
                libgranite-dev,
