--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgranite-dev libgtk-3-dev libjson-glib-dev libgee-0.8-dev libsoup2.4-dev libxml2-dev uuid-dev meson valac
+        apt install -y libgranite-dev libgtk-3-dev libjson-glib-dev libgee-0.8-dev libsoup2.4-dev libxml2-dev uuid-dev meson valac git
     - name: Build
       env:
         DESTDIR: out
