--- a/com.github.manexim.home.yml
+++ b/com.github.manexim.home.yml
@@ -1,6 +1,6 @@
 app-id: com.github.manexim.home
 runtime: io.elementary.Platform
-runtime-version: daily
+runtime-version: '6'
 sdk: io.elementary.Sdk
 command: com.github.manexim.home
 finish-args:
