Add gettext domain

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('com.github.manexim.home', 'vala', 'c')
+project('com.github.manexim.home', 'vala', 'c', version: '0.5.0')
 
 gnome = import('gnome')
 i18n = import('i18n')
