--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,18 @@
+config_data = configuration_data()
+config_data.set('APP_ID', meson.project_name())
+config_data.set('APP_VERSION', meson.project_version())
+config_data.set('GETTEXT_PACKAGE', meson.project_name())
+config_data.set('LOCALEDIR', join_paths(get_option('prefix'), get_option('localedir')))
+
+config_file = configure_file(
+    input: 'Constants.vala.in',
+    output: '@BASENAME@',
+    configuration: config_data
+)
+
 sources = [
     'colors/HSB.vala',
     'colors/RGB.vala',
-    'config/Constants.vala',
     'controllers/DeviceController.vala',
     'controllers/DevicesController.vala',
     'lifx/Controller.vala',
@@ -39,7 +50,8 @@ sources = [
     'widgets/ColorPicker.vala',
     'widgets/IconPopover.vala',
     'widgets/Overlay.vala',
-    'MainWindow.vala'
+    'MainWindow.vala',
+    config_file,
 ]
 
 executable(
