--- a/src/Constants.vala.in
+++ b/src/Constants.vala.in
@@ -19,9 +19,12 @@
 * Authored by: Marius Meisenzahl <mariusmeisenzahl@gmail.com>
 */
 
-namespace Config {
-    public const string APP_ID = "com.github.manexim.home";
-    public const string APP_AUTHOR = "Manexim";
-    public const string APP_NAME = "Home";
-    public const string APP_VERSION = "0.5.0";
+namespace Constants {
+    private const string APP_ID = "@APP_ID@";
+    private const string APP_AUTHOR = "Manexim";
+    private const string APP_NAME = "Home";
+    private const string APP_VERSION = "@APP_VERSION@";
+
+    private const string GETTEXT_PACKAGE = "@GETTEXT_PACKAGE@";
+    private const string LOCALEDIR = "@LOCALEDIR@";
 }
