--- a/data/meson.build
+++ b/data/meson.build
@@ -13,21 +13,21 @@ foreach i : icon_sizes
 endforeach
 
 symbolic_icons = [
-    'com.github.manexim.home.icon.bridge.philips.hue-symbolic',
-    'com.github.manexim.home.icon.fan-symbolic',
-    'com.github.manexim.home.icon.lamp0-symbolic',
-    'com.github.manexim.home.icon.lamp1-symbolic',
-    'com.github.manexim.home.icon.lamp2-symbolic',
-    'com.github.manexim.home.icon.lamp3-symbolic',
-    'com.github.manexim.home.icon.lamp4-symbolic',
-    'com.github.manexim.home.icon.lightbulb-symbolic',
-    'com.github.manexim.home.icon.lightbulb.lifx-symbolic',
-    'com.github.manexim.home.icon.lightbulb.philips.hue-symbolic',
-    'com.github.manexim.home.icon.television-symbolic',
-    'com.github.manexim.home.icon.thing-symbolic',
-    'com.github.manexim.home.icon.spot-symbolic',
-    'com.github.manexim.home.logo.lifx-symbolic',
-    'com.github.manexim.home.logo.philips.hue-symbolic'
+    'com.manexim.home.icon.bridge.philips.hue-symbolic',
+    'com.manexim.home.icon.fan-symbolic',
+    'com.manexim.home.icon.lamp0-symbolic',
+    'com.manexim.home.icon.lamp1-symbolic',
+    'com.manexim.home.icon.lamp2-symbolic',
+    'com.manexim.home.icon.lamp3-symbolic',
+    'com.manexim.home.icon.lamp4-symbolic',
+    'com.manexim.home.icon.lightbulb-symbolic',
+    'com.manexim.home.icon.lightbulb.lifx-symbolic',
+    'com.manexim.home.icon.lightbulb.philips.hue-symbolic',
+    'com.manexim.home.icon.television-symbolic',
+    'com.manexim.home.icon.thing-symbolic',
+    'com.manexim.home.icon.spot-symbolic',
+    'com.manexim.home.logo.lifx-symbolic',
+    'com.manexim.home.logo.philips.hue-symbolic'
 ]
 
 foreach icon : symbolic_icons
