--- a/data/com.github.manexim.home.appdata.xml.in
+++ b/data/com.github.manexim.home.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2019 Manexim -->
 <component type="desktop">
-  <id>com.github.manexim.home</id>
+  <id>com.manexim.home</id>
   <metadata_license>CC0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Home</name>
@@ -18,7 +18,7 @@
     <category>Network</category>
   </categories>
   <provides>
-    <binary>com.github.manexim.home</binary>
+    <binary>com.manexim.home</binary>
   </provides>
   ​<releases>
     <release date="2019-11-03" version="0.5.0">
