--- a/data/com.github.manexim.home.desktop.in
+++ b/data/com.github.manexim.home.desktop.in
@@ -3,6 +3,6 @@ Type=Application
 Name=Home
 GenericName=Home
 Comment=Control your smart home gadgets
-Exec=com.github.manexim.home
-Icon=com.github.manexim.home
+Exec=com.manexim.home
+Icon=com.manexim.home
 Categories=GNOME;GTK;Network;
