--- a/data/com.manexim.home.appdata.xml.in
+++ b/data/com.manexim.home.appdata.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2019 Manexim -->
+<!-- Copyright 2019-2021 Manexim -->
 <component type="desktop">
   <id>com.manexim.home</id>
   <metadata_license>CC0</metadata_license>
@@ -21,6 +21,30 @@
     <binary>com.manexim.home</binary>
   </provides>
   ​<releases>
+    <release date="2021-12-23" version="0.6.0">
+      <description>
+        <p>New:</p>
+        <ul>
+         <li>Using Hdy.Window for rounded corners</li>
+         <li>Support dark style preference</li>
+        </ul>
+        <p>Improved:</p>
+        <ul>
+        </ul>
+        <p>Fixed:</p>
+        <ul>
+        </ul>
+        <p>Translations:</p>
+        <ul>
+          <li>Russian (by camellan)</li>
+          <li>French (by NathanBnm)</li>
+          <li>German (by meisenzahl)</li>
+          <li>Japanese (by ryonakano)</li>
+          <li>Portuguese (by aimproxy)</li>
+          <li>Polish (by oskarkunik)</li>
+        </ul>
+      </description>
+    </release>
     <release date="2019-11-03" version="0.5.0">
       <description>
         <p>New:</p>
